import Partie.De;

import static Partie.De.lancerDe;

public class Main {
    public static void main(String args[]) {
        System.out.println("Bienvenue dans DOOnjon et Dragons");
        int nb = lancerDe(4,5);
        System.out.println(nb);

    }
}