package donjons;

public class Obstacle extends Position {


    public Obstacle() {
        super();
    }

    public Obstacle(int x, int y) {
        super(x, y);
    }
}