package entites;

public class Elfe extends Race{
 public Elfe() {
  super("Elfe",new Statistiques(0,6,0));
 }
}
