package entites;

public class Guerrier extends CharClasse {

 public Guerrier() {
  Statistiques statistiques = new Statistiques(20);
  super("Guerrier",statistiques);
 }

}
