package entites;

public class Halfelin extends Race{
 public Halfelin() {
  super("Halfelin",new Statistiques(0,4,2));
 }
}
