package entites;

public class Humain extends Race{
 public Humain() {
  super("Humain",new Statistiques(2,2,2,2,2));
 }
}
