package entites;

public class Magicien extends CharClasse{
 public Magicien() {
  Statistiques statistiques = new Statistiques(12);
  super("Magicien",statistiques);
 }
}
