package entites;

public class Nain extends Race{
 public Nain() {
  super("Nain",new Statistiques(6,0,0));
 }
}
