package entites;

public class Roublard extends CharClasse{

 public Roublard() {
  Statistiques statistiques = new Statistiques(16);
  super("Roublard",statistiques);
 }


}

