package stuff;

public class Armure extends Equipement {
    int m_classe_Armure;
    public int getClasseArmure(){
        return m_classe_Armure;
    }
}
