package stuff;

public class Equipement {
    boolean actif=false;
    String nom;
    String description;
    public boolean estEquipe() {
        return actif;
    }

    public String getNom(){
        return nom;
    }
}

